6일차/my-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: busybox
      command: ["sh", "-c","echo Username: $USERNAME && echo Password: $PASSWORD && sleep 3600"]
