6일차/my_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my_pod
spec:
  containers:
    - name: my_container
      image: busybox
      command: ["sh", "-c","echo Username: $USERNAME && echo Password: $PASSWORD && sleep 3600"]
